Fixed overflow table issues Fixed img overflow

--- a/src/main/webapp/public/css/style.scss
+++ b/src/main/webapp/public/css/style.scss
@@ -32,6 +32,11 @@ textarea {
   }
 }
 
+img{
+  max-width: 725px; /* you can use % */
+  height: auto;
+}
+
 div.friends-label {
   margin-top: 15px;
 }
@@ -41,12 +46,23 @@ div.liked-label {
   margin-right: 10px;
 }
 
+div.post {
+  max-width: 725px;
+  overflow: hidden;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-all;
+}
+
 div.post-banner {
   margin-bottom: 10px;
 }
 
 div.post-text {
   white-space: pre-line;
+  word-wrap: break-word;
+
+  max-width: 100%;
 
   &.preview {
     max-height: 150px;
